# news.xyz

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
.github/workflows/: deploy.yml
backend/: Cargo.toml  feeds.toml
backend/crates/news-admin/: Cargo.toml
backend/crates/news-admin/src/: claude.rs  handler.rs  main.rs
backend/crates/news-api/: Cargo.toml
backend/crates/news-api/src/: main.rs  routes.rs
backend/crates/news-core/: Cargo.toml
backend/crates/news-core/src/: changes.rs  config.rs  dedup.rs  dynamo.rs  error.rs  feeds.rs  grouping.rs  lib.rs  models.rs  ogp.rs
backend/crates/news-fetcher/: Cargo.toml
backend/crates/news-fetcher/src/: main.rs
backend/crates/news-server/: Cargo.toml
backend/crates/news-server/src/: analyzer.rs  chatweb.rs  claude.rs  db.rs  degradation_agent.rs  enrichment_agent.rs  fetcher.rs  main.rs  mcp.rs  routes.rs  stripe.rs  tts_cache.rs
backend/crates/news-server/src/agents/: image_agent.rs  mod.rs  research_agent.rs  video_agent.rs
backend/infra/: deploy.sh  template.yaml
frontend/: ab.html  about.html  dao.html  index.html  install.sh  manifest.json  offline.html  pro.html  robots.txt  settings.html  sitemap.xml  strategy.html  sw.js
frontend/css/: about.css  ads.css  assistant.css  base.css  chat.css  feed-murmur.css  pro.css  settings.css  site-claud.css  theme-brutalist.css  theme-card.css  theme-hacker.css  theme-lite.css  theme-magazine.css  theme-neon.css  theme-pastel.css  theme-terminal.css  time-layers.css
frontend/dao/: airdrop.html
frontend/js/: ab.js  ads.js  api.js  app.js  assistant.js  chat.js  commands.js  errors.js  feed-murmur.js  google-auth.js  i18n.js  konami.js  offline.js  renderer.js  settings.js  site.js  storage.js  subscription.js  sw-register.js  theme.js  tts.js  vitals.js
