[package]
name = "news-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
news-core = { path = "../news-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
lambda_http = "0.13"
axum = "0.7"
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
aws-sdk-secretsmanager = "1"
