[package]
name = "news-api"
version = "0.1.0"
edition = "2021"

[dependencies]
news-core = { path = "../news-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
lambda_http = "0.13"
axum = "0.7"
tower = "0.5"
