[package]
name = "news-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["dynamo"]
dynamo = ["aws-config", "aws-sdk-dynamodb"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
url = "2"
toml = "0.8"
base64 = "0.22"
futures = "0.3"
regex = "1"
