[package]
name = "news-server"
version = "0.1.0"
edition = "2021"

[dependencies]
news-core = { path = "../news-core", default-features = false }
tokio = { workspace = true, features = ["signal", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "compression-br", "set-header"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower = { version = "0.5", features = ["limit"] }
futures = "0.3"
